--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+.login-area {
+  max-width: 500px;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+
+.login-title {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 30px;
+}
+
+.input-field {
+  margin-bottom: 20px !important;
+}
